--- a/LoRaGateway/Dockerfile
+++ b/LoRaGateway/Dockerfile
@@ -7,6 +7,6 @@ RUN go mod download
 
 COPY ./Gateway ./Utilities ./
 
-RUN CGO_ENABLED=0 GOOS=linux go build ./Gateway/main.go -o /lora-gateway
+RUN CGO_ENABLED=0 GOOS=linux go build -o /lora-gateway ./Gateway/main.go
 
 CMD [ "/lora-gateway" ]
