--- a/LoRaGateway/Dockerfile
+++ b/LoRaGateway/Dockerfile
@@ -5,8 +5,9 @@ WORKDIR /gateway
 COPY go.mod go.sum ./
 RUN go mod download
 
-COPY ./Gateway ./Utilities ./
+COPY ./Utilities ./
+COPY ./*.go ./
 
-RUN CGO_ENABLED=0 GOOS=linux go build -o /lora-gateway /gateway/Gateway/main.go
+RUN CGO_ENABLED=0 GOOS=linux go build -o /lora-gateway
 
 CMD [ "/lora-gateway" ]
