--- a/LoRaGateway/Dockerfile
+++ b/LoRaGateway/Dockerfile
@@ -5,7 +5,8 @@ WORKDIR /gateway
 COPY go.mod go.sum ./
 RUN go mod download
 
-COPY ./Utilities ./
+RUN go get github.com/tangnguyendeveloper/smart_aeroponics/LoRaGateway/Utilities
+
 COPY ./*.go ./
 
 RUN CGO_ENABLED=0 GOOS=linux go build -o /lora-gateway
