--- a/LoRaGateway/Dockerfile
+++ b/LoRaGateway/Dockerfile
@@ -5,9 +5,7 @@ WORKDIR /gateway
 COPY go.mod go.sum ./
 RUN go mod download
 
-RUN go get github.com/tangnguyendeveloper/smart_aeroponics/LoRaGateway/Utilities
-
-COPY ./*.go ./
+COPY * ./
 
 RUN CGO_ENABLED=0 GOOS=linux go build -o /lora-gateway
 
