--- a/LoRaGateway/Dockerfile
+++ b/LoRaGateway/Dockerfile
@@ -5,8 +5,8 @@ WORKDIR /gateway
 COPY go.mod go.sum ./
 RUN go mod download
 
-COPY * ./
-RUN go mod tidy
+ADD Utilities ./
+COPY *.go ./
 
 RUN CGO_ENABLED=0 GOOS=linux go build -o /lora-gateway
 
